--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
             </ul>
         </div>
 
+        <!-- PROFILE PICTURE -->
         <div class="profile">
             <img src="img/me-professional.jpg" alt="profile-picture"  />
         </div>
 
+        <!-- INTRO -->
         <div>
             <h1> hi<span style="color: white">!</span> my name is angeline </h1>
             <ul id="skill-list">
@@ -49,33 +51,18 @@
                     <h2> and i'm studying </h2>
                 </li>
                 <li>
-                    <!--<div class="skillList fade">
-                        <h2>
-                            <span style="color: white">{</span>video games programming<span style="color: white">}</span>
-                        </h2>
-                    </div>-->
 
                     <h2>
                         <span style="color: white">{</span>
+                        
                         <span class="skillList fade">video games programming</span>
                         <span class="skillList fade">c++</span>
                         <span class="skillList fade">c#</span>
                         <span class="skillList fade">unity engine 2019</span>
                         <span class="skillList fade">unreal engine 4</span>
+                        
                         <span style="color: white">}</span>
                     </h2>
-
-                    <!--<div class="skillList fade">
-                        <h2>
-                            <span style="color: white">{</span>c++<span style="color: white">}</span>
-                        </h2>
-                    </div>-->
-
-                    <!--<div class="skillList fade">
-                        <h2>
-                            <span style="color: white">{</span>unreal engine<span style="color: white">}</span>
-                        </h2>
-                    </div>-->
 
                 </li>
             </ul>
