Update language switch button

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </ul>
         </div>
 
-        <div class="language-switch">
+        <!--<div class="language-switch" align="right">
             <input type="checkbox" class="checkbox" id="languageswitch"/>
             <label class="label" for="languageswitch">
                 <span class="switch-first-label"></span>
                 <span class="switch-second-label"></span>
             </label>
-        </div>
+        </div>-->
 
         <!-- PROFILE PICTURE -->
         <div class="profile">
