Add form tags to each input Add submit button in container

--- a/contact.html
+++ b/contact.html
@@ -18,41 +18,37 @@
             </ul>
         </div>
 
-        <!--<div class="contact-container">
-            <p>
-                You can find me on
-                <a href="https://www.linkedin.com/in/angeline-siv/" target="_blank"> LinkedIn. </a>
-            </p>
-            <p>
-                Or send a message to my email address: siv.angeline@ymail.com
-            </p>
-        </div>-->
-
         <div class="contact-container">
             
             <table>
                 <tr>
+                    <!-- FORM -->
                     <td class="form">
-                        <section class="name-input">
-                            <label class="namelabel" for="nameinput">name</label>
-                            <input type="text" id="nameinput" placeholder="angeline siv" />
-                        </section>
+                        <form id="messageform">
+                            <section class="name-input">
+                                <label class="namelabel" for="nameinput">name</label>
+                                <input type="text" id="nameinput" form="messageform" placeholder="angeline siv" />
+                            </section>
 
-                        <section class="email-input">
-                            <label class="emaillabel" for="emailinput">email</label>
-                            <input type="email" id="emailinput" placeholder="siv.angeline@ymail.com" />
-                        </section>
+                            <section class="email-input">
+                                <label class="emaillabel" for="emailinput">email</label>
+                                <input type="email" id="emailinput" form="messageform" placeholder="siv.angeline@ymail.com" />
+                            </section>
 
-                        <section class="message-input">
-                            <label class="messagelabel" for="messageinput">message</label>
-                            <input type="text" id="messageinput" placeholder="any comments or questions?" />
-                        </section>
-                        <button type="submit">send message</button>
+                            <section class="message-input">
+                                <label class="messagelabel" for="messageinput">message</label>
+                                <textarea id="messageinput" form="messageform" placeholder="any comments or questions?"></textarea>
+                            </section>
+                            <section class="submit-button">
+                                <button type="submit">send message</button>
+                            </section>
+                        </form>
                     </td>
+                    <!-- DESC -->
                     <td>
                         <p>
                             The best way to contact me is on <a href="https://www.linkedin.com/in/angeline-siv/" target="_blank"> LinkedIn</a>.
-                            That is also where you can find more details regarding my resume.
+                            That is also where you can find more details regarding my résumé.
                             If you would like to send me an email instead, simply fill in the form!
                         </p>
                     </td>
